5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1773_2101.log
== TEST (2019-05-26 02:11:51) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = (s1+s2)
	s = s + (s1 + s2)
	s2 = s2 + s1
	s1 = s1 + s2
print(z)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 02:12:03) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
z = zeros(n,dtype = int)
while(i<n):
	z[i] = (s1+s2)
	s = s + (s1 + s2)
	s2 = s2 + s1
	s1 = s1 + s2
print(z)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 02:12:29) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s
	s = s + (s1 + s2)
	s2 = s2 + s1
	s1 = s1 + s2
print(z)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 02:14:54) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i>n):
	s = s + (s1+s2)
	s1 = s2
	s2 = s
	i = i + 1
	print(s)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 02:14:55) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i>n):
	s = s + (s1+s2)
	s1 = s2
	s2 = s
	i = i + 1
	print(s)
	
	
	
	
-- EXECUTION TIME:
0.287648
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:

-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:

-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:18:22) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i<n):
	s2 = s2 + s1
	s1 = s2
	i = i + 1
print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:18:33) 
-- CODE:
from numpy import *
n = int(input("digite o numrero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i<n):
	s2 = s2 + s1
	s1 = s2
	i = i + 1
print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:19:10) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i<n):
	s2 = s2 + s1
	s1 = s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:19:16) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
s = 0
while(i<n):
	s2 = s2 + s1
	s1 = s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:27:33) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s1 = s1 + s2
	
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:28:51) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:28:58) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:29:17) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s2 = s2 + s1
	s1 = s1 + s2
	
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:29:39) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s2 = s2 + s1
	s1 = s1 + s2
	
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:29:45) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	soma = soma + s1
	s2 = s2 + s1
	s1 = s1 + s2
	
	i = i + 1
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:30:30) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:30:41) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1)
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:30:54) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1)
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:31:35) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:31:45) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:31:48) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:32:17) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:35:14) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1)
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:35:36) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:35:44) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:36:25) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:36:25) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n/2):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:36:56) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:37:16) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n/2):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:38:24) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n/2):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 0.5
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:38:35) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<n/2):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1.5
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:38:47) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
soma = 0
s1 = 0
s2 = 1
while(i<=n/2):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1.5
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:48:01) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<=n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:50:41) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:51:08) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s2
	else:
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:51:30) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s2
	else:
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:52:36) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s2
	else:
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:52:52) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	print(s1)
print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:54:32) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:54:32) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:54:32) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:54:32) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	else:
		z[i] = s2
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:01:04) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	if(i1 % 2 == 0):
		z[i1] = s1
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s2
		i1 = i1 + 1
		i2 = i2 + 1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:01:16) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	if(i1 % 2 == 0):
		z[i1] = s1
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s2
		i1 = i1 + 1
		i2 = i2 + 1
	s2 = s2 + s1
	s1 = s1 + s2
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:01:51) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s1
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s2
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:03:51) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s2
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s1
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:03:52) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s2
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s1
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:03:54) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s2
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s1
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:04:01) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s2
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s1
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:05:26) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	if(i1 % 2 == 0):
		z[i1] = s2
		i1 = i1 + 1
		i2 = i2 + 0
	else:
		z[i2] = s1
		i1 = i1 + 1
		i2 = i2 + 1
	
	print(z)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:11:34) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i1 = 0
i2 = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i1<n):
	s2 = s2 + s1
	s1 = s1 + s2
	print(s2)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:13:41) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s2)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:13:49) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:15:59) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(s1) # s1 par
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:16:07) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:16:49) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:17:04) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	if(i % 2 == 0):
		z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:19:34) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:23:15) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	z[i] = s4
	s4 = s4 + s3
	s3 = s3 + s4
	i2 = i2 + 1
	print(z2)
	print(s4)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:23:34) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	z[i2] = s4
	s4 = s4 + s3
	s3 = s3 + s4
	i2 = i2 + 1
	print(z2)
	print(s4)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:23:41) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	z[i] = s4
	s4 = s4 + s3
	s3 = s3 + s4
	print(z2)
	print(s4)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:24:24) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par

i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	z2[i2] = s4
	s4 = s4 + s3
	s3 = s3 + s4
	i2 = i2 + 1
print(z2)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:26:13) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par

i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:27:30) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	print(z) # s1 par
	print(s1)
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	z[i] = s4
	s4 = s4 + s3
	s3 = s3 + s4
	i2 = i2 + 1
	print(z2)
	print(s4)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:54:00) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(n%2 == 0)
		z3[i3] = z[i3]
	else:
		z3[i3] = z2[i3]
	i3 = i3 + 1
print(z3)
	
	
-- ERROR:
File "XXXX", line 30
    if(n%2 == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:54:05) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(n%2 == 0):
		z3[i3] = z[i3]
	else:
		z3[i3] = z2[i3]
	i3 = i3 + 1
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:54:29) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
	else:
		z3[i3] = z2[i3]
	i3 = i3 + 1
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:56:27) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i2 = i2 + 0
	else:
		z3[i3] = z2[i2]
		i3 = i3 + 0
		i2 = i2 + 1
print(z3)
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:57:17) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i3] = z2[i2]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:57:34) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i3] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:58:58) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i3] = z2[i4]
		i3 = i3 + 1
		i4 = i4 + 1
print(z3)
print(z3)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:03:19) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:03:20) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:04:01) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:06:12) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:06:29) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:10:00) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:11:55) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
z3 = zeros(n,dtype = int)
while(i3<n):
	if(i3%2 == 0):
		z3[i3] = z[i3]
		i3 = i3 + 1
		i4 = i4 + 0
	else:
		z3[i4] = z2[i4]
		i3 = i3 + 0
		i4 = i4 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:15:48) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i3] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i4] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:17:23) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i3] = z2[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i4] = z[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:18:29) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:20:39) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:20:55) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:21:10) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:22:14) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:22:37) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:22:43) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z2[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:24:07) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:24:12) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:24:44) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i4]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i3]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:24:56) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:25:00) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:25:05) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:25:13) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 14:25:24) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
print(z) # s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1
print(z2)
#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- EXECUTION TIME:
0.365525
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[   0    1    3    8   21   55  144  377  987 2584]
[   1    2    5   13   34   89  233  610 1597 4181]
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[  0   1   3   8  21  55 144 377]
[  1   2   5  13  34  89 233 610]
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[      0       1       3       8      21      55     144     377     987
    2584    6765   17711   46368  121393  317811  832040 2178309 5702887]
[      1       2       5      13      34      89     233     610    1597
    4181   10946   28657   75025  196418  514229 1346269 3524578 9227465]
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 14:25:47) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	# s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1

#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- EXECUTION TIME:
0.502588
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
digite o numero: [   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:25:51) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	# s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1

#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:25:57) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	# s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1

#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 14:26:16) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
################################
i = 0
s1 = 0
s2 = 1
z = zeros(n,dtype = int)
while(i<n):
	z[i] = s1
	s2 = s2 + s1
	s1 = s1 + s2
	i = i + 1
	# s1 par
###############################
i2 = 0
s3 = 0
s4 = 1
z2  = zeros(n,dtype = int)
while(i2<n):
	s4 = s4 + s3
	s3 = s3 + s4
	z2[i2] = s4
	i2 = i2 + 1

#################################
i3 = 0
i4 = 0
i5 = 0
z3 = zeros(n,dtype = int)
while(i5<n):
	if(i5%2 == 0):
		z3[i5] = z[i3]
		i4 = i4 + 0
		i3 = i3 + 1
	else:
		z3[i5] = z2[i4]
		i4 = i4 + 1
		i3 = i3 + 0
	i5 = i5 + 1
print(z3)

	
	
-- EXECUTION TIME:
0.469631
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
